# UIUC-CS-126-Final-Project

./: CMakeLists.txt  PROPOSAL.md  README.md  metadata.yml
apps/: cinder_app_main.cc
include/: adventure_app.h  visualizer.h
include/entities/: enemy.h  player.h
include/items/: weapon.h
include/map/: door.h  dungeon.h  room.h
include/mechanics/: engine.h
resources/: doorless.txt  dungeon.txt  test.txt
src/: adventure_app.cc  visualizer.cc
src/entities/: enemy.cc  player.cc
src/items/: weapon.cc
src/map/: door.cc  dungeon.cc  room.cc
src/mechanics/: engine.cc
tests/entities/: test_enemy.cc  test_player.cc
tests/items/: test_weapon.cc
tests/map/: test_door.cc  test_dungeon.cc  test_room.cc
tests/mechanics/: test_engine.cc
